XIVY-6580 Show start links on start page, open in fullscreen option

--- a/workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDefaultPage/TestDefaultPage.xhtml
+++ b/workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDefaultPage/TestDefaultPage.xhtml
@@ -6,7 +6,7 @@
   <ui:composition template="/layouts/basic-8.xhtml">
     <ui:define name="title">TestDefaultPage</ui:define>
     <ui:define name="content">
-      <h3>
+      <h3 id="defaultPagesTitle">
         This is a test page for default pages.
       </h3>
       <p:panelGrid columns="2" styleClass="ui-panelgrid-blank">
