--- a/workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog/TestDialog.xhtml
+++ b/workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog/TestDialog.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="title">TestDialog</ui:define>
     <ui:define name="content">
 
-      <h3>
+      <h3 id="testDialogTitle">
         This is an <a
           href="https://developer.axonivy.com/doc/latest/designer-guide/user-interface/user-dialogs.html#html-dialogs">Html
           Dialog</a> implemented with JSF and <a href="http://primefaces.org/">Primefaces</a> as widget library
