XIVYWF-168 Improve testing data

--- a/workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog1/TestDialog1.xhtml
+++ b/workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog1/TestDialog1.xhtml
@@ -8,9 +8,7 @@
     <ui:define name="content">
 
       <h3 id="testDialogTitle">
-        This is an <a
-          href="https://developer.axonivy.com/doc/latest/designer-guide/user-interface/user-dialogs.html#html-dialogs">Html
-          Dialog</a> implemented with JSF and <a href="http://primefaces.org/">Primefaces</a> as widget library
+      Hey! This is first test dialog. Below you have some elements that do absolutely nothing.
       </h3>
 
       <h:form id="form">
