--- a/dev-workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog2/TestDialog2.xhtml
+++ b/dev-workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog2/TestDialog2.xhtml
@@ -3,7 +3,7 @@
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
   xmlns:pe="http://primefaces.org/ui/extensions">
 <h:body>
-  <ui:composition template="/layouts/basic-8.xhtml">
+  <ui:composition template="/layouts/frame.xhtml">
     <ui:define name="title">TestDialog2</ui:define>
     <ui:define name="content">
 
