use maven ivy-api

--- a/dev-workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDefaultPage/TestDefaultPage.xhtml
+++ b/dev-workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDefaultPage/TestDefaultPage.xhtml
@@ -9,7 +9,7 @@
       <h3 id="defaultPagesTitle">
         This is a test page for default pages.
       </h3>
-      <p:panelGrid columns="2" styleClass="ui-panelgrid-blank">
+      <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" layout="tabular">
         <p:button id="homeBtn" href="#{ivy.html.applicationHomeRef()}" value="Home Page" style="width: 100%"/>
         <p:button id="startsBtn" href="#{ivy.html.processStartListRef()}" value="Process Starts" style="width: 100%"/>
         <p:button id="tasksBtn" href="#{ivy.html.taskListRef()}" value="Task List" style="width: 100%"/>
