--- a/dev-workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog2/TestDialog2.xhtml
+++ b/dev-workflow-ui-test-data/src_hd/ch/ivyteam/ivy/project/workflow/TestDialog2/TestDialog2.xhtml
@@ -10,7 +10,7 @@
       <h3>Hello. This is the second dialog for testing. Below are some cool buttons you can click for fun.</h3>
 
       <h:form id="form">
-        <p:panelGrid columns="2" styleClass="ui-panelgrid-blank">
+        <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" layout="tabular">
           <p:button value="Button 1" style="width: 100%" />
           <p:button value="Button 2" style="width: 100%" />
           <p:button value="Button 3" style="width: 100%" />
